syntax = "proto3";

option java_package = "ua.nedz.grpc";
option java_outer_classname = "StatsProto";
option objc_class_prefix = "SP";

package stats;

service StatsService {
    rpc join (JoinRequest) returns (stream Statistics) {}
    rpc addRecord (Record) returns (AddRecordResponse) {}
    rpc addVote (AddVoteRequest) returns (Record) {}
}

message JoinRequest {
    string name = 1;
}

message Statistics {
    repeated Record record = 1;
}

message Record {
    int64 id = 1;
    string author = 2;
    string content = 3;
    int64 votes = 4;
}

message AddRecordResponse {
    bool result = 1;
}

message AddVoteRequest {
    int64 recordId = 1;
    string voterName = 2;
}

